--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -21,7 +21,6 @@ permissions:
 env:
   APP_NAME: SSW.YakShaver
   NODE_VERSION: 20
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   check-release:
@@ -49,6 +48,9 @@ jobs:
   build-windows:
     needs: check-release
     runs-on: windows-latest
+    
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v6
         with:
@@ -109,6 +111,8 @@ jobs:
   build-macos:
     needs: check-release
     runs-on: macos-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v6
         with:
