--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -120,7 +120,7 @@ jobs:
           AZURE_ENTRA_APP_CLIENT_ID: ${{ secrets.AZURE_ENTRA_APP_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           AZURE_AUTH_SCOPE: ${{ secrets.AZURE_AUTH_SCOPE }}
-          AZURE_AUTH_CUSTOM_PROTOCOL: ${{ secrets.AZURE_AUTH_CUSTOM_PROTOCOL }}
+          AZURE_AUTH_CUSTOM_PROTOCOL: yakshaver-desktop
         run: |
           "YOUTUBE_CLIENT_ID=$env:YOUTUBE_CLIENT_ID" | Out-File -FilePath ".env" -Encoding utf8 -NoNewline
           Add-Content -Path ".env" -Value "`nYOUTUBE_CLIENT_SECRET=$env:YOUTUBE_CLIENT_SECRET"
@@ -210,7 +210,7 @@ jobs:
           AZURE_ENTRA_APP_CLIENT_ID: ${{ secrets.AZURE_ENTRA_APP_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           AZURE_AUTH_SCOPE: ${{ secrets.AZURE_AUTH_SCOPE }}
-          AZURE_AUTH_CUSTOM_PROTOCOL: ${{ secrets.AZURE_AUTH_CUSTOM_PROTOCOL }}
+          AZURE_AUTH_CUSTOM_PROTOCOL: yakshaver-desktop
         run: |
           printf "YOUTUBE_CLIENT_ID=%s\n" "$YOUTUBE_CLIENT_ID" > .env
           printf "YOUTUBE_CLIENT_SECRET=%s\n" "$YOUTUBE_CLIENT_SECRET" >> .env
