--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "url": "https://github.com/SSWConsulting/SSW.YakShaver.Desktop.git"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "^1.0.30",
-    "@ai-sdk/mcp": "^0.0.8",
-    "@ai-sdk/openai": "^2.0.80",
+    "@ai-sdk/deepseek": "^2.0.0-beta.49",
+    "@ai-sdk/mcp": "^1.0.0-beta.32",
+    "@ai-sdk/openai": "^3.0.0-beta.90",
     "@azure/msal-node": "^3.8.4",
     "@azure/openai": "^2.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
