--- a/.github/workflows/automated-release-electron-app.yml
+++ b/.github/workflows/automated-release-electron-app.yml
@@ -1,5 +1,5 @@
 name: Automated Electron App Release
-run-name: "YakShaver App Release - Build #${{ github.run_number }}"
+run-name: "YakShaver App Release - Build #${{ github.run_number }} - ${{ github.event.head_commit.message }}"
 
 on:
   push:
