--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "publish": "npm run build && cd src/ui && npm run build && cd ../.. && electron-builder --publish always --config electron-builder.config.js",
     "lint": "biome check --write .",
     "format": "biome format --write .",
-    "test": "vitest"
+    "test": "vitest",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": {
@@ -36,7 +39,9 @@
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@modelcontextprotocol/sdk": "^1.24.3",
     "ai": "^6.0.0-beta.139",
+    "better-sqlite3": "^12.5.0",
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "electron-store": "^11.0.2",
     "electron-updater": "^6.6.2",
     "get-port": "^7.1.0",
@@ -51,12 +56,15 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
     "@electron/fuses": "^1.8.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
     "@types/tmp": "^0.2.6",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
+    "drizzle-kit": "^0.31.8",
     "electron": "^39.2.6",
     "electron-builder": "^26.0.12",
+    "electron-rebuild": "^3.2.9",
     "typescript": "^5.9.3",
     "vitest": "^4.0.15",
     "wait-on": "^9.0.3"
