--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "biome check --write .",
     "format": "biome format --write .",
     "test": "vitest",
+    "postinstall": "electron-rebuild -f -w better-sqlite3",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
