--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^17.2.3",
     "electron-store": "^11.0.2",
     "electron-updater": "^6.6.2",
+    "form-data": "^4.0.5",
     "get-port": "^7.1.0",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0",
