--- a/biome.json
+++ b/biome.json
@@ -1,9 +1,12 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
-
+  "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
   "assist": {
     "enabled": true,
-    "actions": { "source": { "organizeImports": "on" } }
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
   },
   "linter": {
     "enabled": true,
@@ -14,6 +17,9 @@
   "css": {
     "linter": {
       "enabled": false
+    },
+    "parser": {
+      "tailwindDirectives": true
     }
   },
   "formatter": {
