--- a/.github/workflows/biome-check.yml
+++ b/.github/workflows/biome-check.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run Biome format check
-        run: npx biome format . --check
+        run: npx biome format .
       - name: Run Biome linter
         run: npx biome lint .
