--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -158,7 +158,7 @@ jobs:
           CI: true
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CHANNEL: ${{ needs.cleanup-release.outputs.channel }}
-          # Note: vite.config.mts checks for the string "true"
+          # Disable minification for PR preview builds
           VITE_DEBUG_BUILD: "true"
 
       - name: Fix update manifest filenames
@@ -287,6 +287,7 @@ jobs:
           CI: true
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CHANNEL: ${{ needs.cleanup-release.outputs.channel }}
+          # Disable minification for PR preview builds
           VITE_DEBUG_BUILD: "true"
 
       - name: Upload macOS artifacts
